<resources>
    <string name="app_name">Phim hay</string>
    <string name="nameOwner">Phạm Xuân Trường</string>
    <string name="facebook_app_id">820005722423714</string>
    <string name="fb_login_protocol_scheme">fb820005722423714</string>
    <string name="facebook_client_token">4db1dd7b95804ee77a1c83b7c9793c46</string>
    <string name="film_start">%1$d*</string>
    <string name="episode_film">%1$d</string>
    <string name="one_episode">Phim ngắn</string>
    <string name="episode_total">Phim bộ: %1$d tập</string>
    <string name="image_logo_app">logo_app</string>
    <string name="image_play_film">image_play_film</string>
    <string name="xem_phim">Xem phim</string>
    <string name="description">Tóm tắt nội dung</string>
    <string name="directors">Đạo diễn: </string>
    <string name="detail">Thông tin bộ phim</string>
    <string name="image_film">Image Film</string>
    <string name="tb_edit_text">Danh sách tìm kiếm trống</string>
    <string name="hint">Tên phim…</string>
    <string name="login_facebook">Đăng nhập bằng Facebook</string>
    <string name="title_login">Đăng nhập vào Phim hay</string>
    <string name="text_gt_login">Đăng nhập để trải nghiệm phim tốt hơn</string>
    <string name="login_google">Đăng nhập bằng Google</string>
    <string name="login_other">Hoặc đăng nhập bằng</string>
    <string name="twitter">Twitter</string>
    <string name="Email">Email</string>
    <string name="phone">Phone</string>
    <string name="tap">Tập</string>
    <string name="dexuat">Bạn cũng có thể thích</string>
    <string name="trang_chu">Thịnh hành</string>
    <string name="download">Tải xuống</string>
    <string name="favorite">Yêu thích</string>
    <string name="kham_pha">Khám phá</string>
    <string name="ca_nhan">Hồ sơ</string>
    <string name="tv_duration">%1$s / tập</string>
    <string name="tv_view_number">Lượt xem: %1$d</string>
    <string name="tv_created">Ngày tạo: %1$s-%2$s-%3$s</string>
    <string name="tv_star_rating">Đánh giá: %1$d*</string>
    <string name="tv_at_episode">Tập %1$d</string>
    <string name="history">Lịch sử xem</string>
    <string name="title_size">Danh sách trống</string>
    <string name="fav_film">Phim yêu thích</string>
    <string name="login">Đăng nhập</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="add_film_favorite">Đã thêm vào Mục yêu thích</string>
    <string name="add_film_like">Đã thích film</string>
    <string name="remove_film_like">Đã bỏ thích film</string>
    <string name="add_film_dislike">Đã không thích film</string>
    <string name="remove_film_dislike">Đã bỏ không thích film</string>
    <string name="remove_film_favorite">Đã xóa khỏi Mục yêu thích</string>
    <string name="downloaded_film">Đã tải xuống</string>
    <string name="film_favorite">Mục yêu thích</string>
    <string name="cancel_download_film">Dừng tải xuống</string>
    <string name="downloading_film">Đang tải xuống</string>
    <string name="show_all_film">Đã hiển thị hết film</string>
    <string name="number">%1$d</string>
    <string name="like">Thích</string>
    <string name="dislike">Không thích</string>
    <string name="ms_permission_denied">Không thể thực thi tính năng này vì quyền cần thiết cho tính năng này đã bị từ chối</string>
    <string name="volume">Âm lượng: </string>
    <string name="bright">Độ sáng: </string>
    <string name="brightness">%1$d%</string>
    <string name="volumelevel">%1$d%</string>
    <string name="off">Off</string>
    <string name="setting">Cài đặt</string>
    <string name="help">Trợ giúp và phản hồi</string>
    <string name="feedback">Phản hồi</string>
    <string name="info_account">Thông tin cá nhân</string>
    <string name="setting_watch">Cài đặt phát</string>
    <string name="logout">Đăng xuất</string>
    <string name="name">Tên người dùng</string>
    <string name="birth_day">Ngày sinh</string>
    <string name="address">Địa chỉ</string>
    <string name="story">Tiểu sử</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="manage_link">Quản lý thông tin liên kết</string>
    <string name="uid">UID</string>
    <string name="auto_play">Tự động phát chiếu</string>
    <string name="auto_play_full_screen">Tự động toàn màn hình</string>
    <string name="feature_deploying">Tính năng đang được phát triển</string>
    <string name="iv_back">back</string>
    <string name="dration_watched">Đã xem: %1$d%</string>
    <string name="buy_premium">Mua Premium</string>
    <string name="buy_title">Mua Premium để khám phá vô số nội dung</string>
    <string name="account_vip">Bạn đã là thành viên vip. Hãy vào kiểm tra gói hoặc nâng cấp gói đã sử dụng nào</string>
    <string name="go">Go</string>
    <string name="title_buy">Mua Premium để mở khóa tất cả các bộ phim</string>
    <string name="type_premium">Các gói Premium</string>
    <string name="premium_month">Premium tháng</string>
    <string name="premium_yearly">Premium năm</string>
    <string name="price_monthly">47 000 VND</string>
    <string name="price_yearly">439 000 VND</string>
    <string name="buy">Mua ngay</string>
    <string name="benifit_premium">Quyền lợi Premium</string>
    <string name="wsToken">7da353b8a3246f851e0ee436d898a26d</string>
    <string name="premium">Premium</string>
    <string name="des_type_premium_month">* Bạn sẽ được trải nghiệm toàn bộ các phim Premium trong một tháng. Thời hạn gói bắt đầu từ lúc bạn đăng kí.</string>
    <string name="des_type_premium_year">* Bạn sẽ được trải nghiệm toàn bộ các phim Premium trong một năm. Thời hạn gói bắt đầu từ lúc bạn đăng kí.</string>
    <string name="create_payment_success">Tạo thanh toán thành công</string>
    <string name="create_payment_unsuccess">Tạo thanh toán không thành công</string>
    <string name="refund_success">Hoàn tiền thành công</string>
    <string name="refund_unsucces">Hoàn tiền không thành công</string>
    <string name="history_buy_premium">Lịch sử mua Premium</string>
    <string name="update">Cập nhật</string>
    <string name="duration_watch">Bạn đã xem đến: %1$s</string>
    <string name="day_created">Ngày tạo: %1$s</string>
    <string name="day_watch">Ngày ra mắt: %1$s</string>
    <string name="day_favorite">Ngày thêm: %1$s</string>
    <string name="delete">Xóa</string>
    <string name="cancel">Hủy</string>
    <string name="design_by">Được thiết kế bởi</string>
    <string name="privacy_setting">Cài đặt cá nhân</string>
    <string name="movie_setting">Cài đặt phát chiếu</string>
    <string name="info_account_2">Thông tin tài khoản</string>
    <string name="sex">Giới tính</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>

    <string name="not_logged_in_message">Bạn cần đăng nhập để thực hiện tính năng này</string>
    <string name="notify_empty">Mục yêu thích rỗng</string>
    <string name="history_watch_empty">Lịch sử xem rỗng</string>
    <string name="history_buy_empty">Lịch sử mua trống</string>
    <string name="get_data_fail">Tải dữ liệu thất bại</string>
    <string name="monthly_package">Gói tháng</string>
    <string name="status">Trạng thái:</string>
    <string name="date_register">Ngày đăng kí:</string>

    <string name="notify_login_google_fail">Đăng nhập không thành công</string>

    <string name="table_user">tbluser</string>
    <string name="name_database_firebase">WatchFilm</string>
    <string name="name_database_sharedPreferences">MyPrefs</string>
    <string name="id_user">idUser</string>
    <string name="document_id">documentId</string>

    <string name="title_weather">%d°C tại Hà Nội</string>
    <string name="category_film">Thể loại: %s</string>
    
    <string name="rate_film">Điểm đánh giá: %d/5</string>
</resources>