<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ChoosePaymentActivity">

    <RelativeLayout
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/buy_premium"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_history_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_payment_history" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lout_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tool_bar"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/lout_iv_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="25dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_account"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_account_default" />
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_name_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/lout_iv_account"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/buy_premium" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_name_account"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/lout_iv_account"
            android:text="@string/title_buy" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lout_type_premium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lout_account"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_premium"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_type"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/lout_buy_monthly"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/bg_premium"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_buy_monthly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/premium_month"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_buy_monthly"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/price_monthly"
                    android:textColor="#E55151"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/lout_buy_yearly"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_toEndOf="@+id/lout_buy_monthly"
                android:layout_weight="1"
                android:background="@drawable/bg_premium_unselected"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_buy_yearly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/premium_yearly"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_buy_yearly"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/price_yearly"
                    android:textColor="#E55151"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_des_type_premium"
        android:layout_marginHorizontal="10dp"
        android:textColor="@color/gray"
        android:layout_below="@+id/lout_type_premium"
        android:text="@string/des_type_premium_month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_buy"
        android:layout_marginTop="10dp"
        android:text="@string/buy"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/bg_buy_premium"
        android:layout_below="@+id/tv_des_type_premium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title_benefit"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_below="@+id/btn_buy"
        android:text="@string/benifit_premium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_below="@+id/tv_title_benefit"
        android:src="@drawable/ic_benefit_uer_vip"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>