<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="@string/info_account_2" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_account"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_account_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tool_bar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:padding="15dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_account" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:maxWidth="200dp"
        android:maxLength="25"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/gray"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/title_name"
        app:layout_constraintEnd_toStartOf="@+id/iv_change_name"
        app:layout_constraintTop_toTopOf="@+id/title_name"
        tools:text="Phạm Xuân Trường" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_change_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:src="@drawable/ic_arrow_right_more_category"
        app:layout_constraintBottom_toBottomOf="@+id/title_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title_name" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_light"
        app:layout_constraintTop_toBottomOf="@+id/title_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:padding="15dp"
        android:text="@string/address"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_name" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:maxWidth="200dp"
        android:maxLength="25"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/gray"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/title_address"
        app:layout_constraintEnd_toStartOf="@+id/iv_change_birthday"
        app:layout_constraintTop_toTopOf="@+id/title_address"
        tools:text="Đại Sơn, Tứ Kỳ, Hải Dương" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_change_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:src="@drawable/ic_arrow_right_more_category"
        app:layout_constraintBottom_toBottomOf="@+id/title_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title_address" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_light"
        app:layout_constraintTop_toBottomOf="@+id/title_address" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:padding="15dp"
        android:text="@string/phone_number"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_address" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_number_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:inputType="phone"
        android:maxWidth="200dp"
        android:maxLength="10"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/gray"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/title_phone_number"
        app:layout_constraintEnd_toStartOf="@+id/iv_change_story"
        app:layout_constraintTop_toTopOf="@+id/title_phone_number"
        tools:text="0356397193" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_change_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:src="@drawable/ic_arrow_right_more_category"
        app:layout_constraintBottom_toBottomOf="@+id/title_phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title_phone_number" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_light"
        app:layout_constraintTop_toBottomOf="@+id/title_phone_number" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_phone_number">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:padding="15dp"
            android:text="@string/sex"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/checkBox_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:text="@string/male"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/checkBox_female"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/tvSex"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/checkBox_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="41dp"
            android:text="@string/female"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/checkBox_male"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_light"
        app:layout_constraintTop_toBottomOf="@+id/cl_sex" />

    <ProgressBar
        android:id="@+id/load_update_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_white_arrow"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textColor="@color/ic_launcher_background"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btn_logout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_white_arrow"
        android:backgroundTint="@color/gray_light"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="@color/ic_launcher_background"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>